# romance-training

./: .env.example  .gitignore  AGENTS.md  README.md  REQUIREMENTS.md  prepare_for_cloud.sh  pyproject.toml  requirements-dev.txt  requirements-train.txt
cloud_setup/: modal_train.py  runpod_setup.sh  vast_ai_setup.sh
docs/: CORPUS_ORGANIZATION.md  DATA_PATHS_QUICKREF.md  GPU_RUNBOOK.md
eval/style_benchmark/: README.md  fixture.json  overused_llm_names.json
source/: Style-in-Fiction.parsed.md  StyleRubric.md  multi-pass.md  style_rubric.json
source-data/: DATASET_REVIEW.json  README.md
source-data/manifests/: Robot.E.Howard.v2.json  fiction_books.json  fiction_books_korshuk.json  gutenberg_fiction.json  gutenberg_gothic_fiction.json  horror_novel_chunks.json  literotica_stories.json  lovecraftcorpus.json  romance_books_32K.json  romance_books_korshuk.json
source/extracted/: style_analysis_system.json  style_knowledge.jsonl
tools/: data_paths.py  llm_client.py
tools/corpus_preview/: preview_corpus.py
tools/data_preparation/: README.md  bookrix_metadata.py  build_pipeline_chunks.py  clean_processed_corpora.py  (+28 more)
train/: DATA_README.txt  annotate_fixed.py  annotate_minimal.py  annotate_romance.py  annotate_romance_simple.py  annotate_simple.py  annotate_working.py  annotation_stats_100.json  diagnose_torch_windows.ps1  install_llama_cpp_windows.ps1  install_training_deps.ps1  install_training_deps.sh  local_llm_agent.py  local_llm_agent_fixed.py  test_annotator.py  test_llm.py  test_scrape.py  test_scrape2.py  train_config.example.toml  train_qwen_unsloth.py
(+130 files in other folders)
